# Solana_Diamond_Protocol_MVP

./: .gitignore  ARCHITECTURE.md  Anchor.toml  CONTRIBUTING.md  Cargo.toml  FLOW_DIAGRAM.md  MVP_SUMMARY.md  NATIVE_RUST_GUIDE.md  QUICKSTART.md  README.diamond.md  README.md  UNIVERSAL_PORTABILITY.md
native/: Cargo.toml  EXAMPLE.md  OPTIMIZATION_NOTES.md  README.md  build.sh  validator.rs
native/facet/: Cargo.toml
native/facet/src/: lib.rs
native/router/: Cargo.toml
native/router/src/: error.rs  lib.rs  processor.rs  state.rs
native/router/src/diamond_cut/: mod.rs
native/router/src/diamond_router/: mod.rs
native/router/src/diamond_state/: mod.rs
programs/sol_diamond/: Cargo.toml
programs/sol_diamond/src/: error.rs  lib.rs
programs/sol_diamond/src/diamond_cut/: mod.rs
programs/sol_diamond/src/diamond_router/: mod.rs
programs/sol_diamond/src/diamond_state/: mod.rs
