[package]
name = "diamond-router-native"
version = "0.1.0"
edition = "2021"
description = "Native Rust implementation of Solana Diamond Router (Anchor-free)"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "2"
borsh = { version = "0.10", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "2"
solana-sdk = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
